--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Papyrus';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 20 px;
 }
 
 code {
